[package]
name = "moore-hilbert-sys"
version = "0.1.0"
authors = ["Rusty Conover <rusty@conover.me>"]
edition = "2018"
license-file="LICENSE.txt"
description = "A unsafe Rust binding to Doug Moore's Fast Hilbert Curve Generation, Sorting, and Range Queries"
keywords = ["hilbert", "hilbert-curve"]
repository = "https://github.com/rustyconover/moore-hilbert-sys.git"

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.53.2"
